# hf-mirror-hub

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
hf_mirror_hub/: cli.py
tests/: test_cli.py
